@@ -1,5 +1,12 @@
 @node Overview
 @chapter Overview
 
-The Pango wrapper for Guile is a part of Guile-GNOME. Maybe write more
-here at some point.
+@code{(gnome pango)} wraps the Pango text rendering library for Guile.
+It is a part of Guile-GNOME.
+
+Some example code would be really nice here; I don't have any at the
+moment. So send something to the guile-gnome list and be famous on the
+interwebs!
+
+See the documentation for @code{(gnome gobject)} for more information
+on Guile-GNOME.
