@@ -9,5 +9,9 @@ guilemodule_DATA += pango.scm
 SUBDIRS += gw overrides
 endif
 
-EXTRA_DIST = pango.scm
+if HAVE_PANGOCAIRO
+guilemodule_DATA += pangocairo.scm
+endif
+
+EXTRA_DIST = pango.scm pangocairo.scm
 DIST_SUBDIRS = gw overrides
